--- a/slides_g-gen_even_2018.tex
+++ b/slides_g-gen_even_2018.tex
@@ -344,13 +344,12 @@ Czech National Corpus (CNK) survey:
 
 \begin{frame}{Unified theory of (N/P)PI and scalar particles}
 
-Krifka (1995):
 
 \begin{itemize}
 \tightlist
 \item
   emphatic (strong) NPIs and PPIs are subject to the same
-  probability-based presupposition (Emph.Assert)
+  probability-based presupposition (Krifka's Emph.Assert)
 \item
   pre-experimental assumptions:
 \item
@@ -358,29 +357,19 @@ Krifka (1995):
 \item
   \emph{ani} = Krifka's \emph{ANY} (strong NPI)
 \end{itemize}
-
-\ex. \a. * Mary read ANY book. \b. Mary didn't read ANY book.
-
-\ex. \a. * Mary doesn't have TONS of money. \b. Mary has TONS of money.
-
 \end{frame}
 
 \begin{frame}
+\begin{itemize}
 
-Krifka's spirit but Heim/Crnič formalization (Heim (1984), Crnič (2011),
+\item Krifka's spirit but Heim/Crnič formalization (Heim (1984), Crnič (2011),
 Crnič (2014))
 
-\begin{itemize}
 \tightlist
 \item
-  Polarity Items (PI) are alternative-introducing
-\item
+  PIs are alternative-introducing,
   alternatives are integrated into truth-conditions via covert
-  \emph{even} (\(\approx\) Krifka's Emph.Assert)
-\item
-  \emph{even} is vacuous in truth-conditions
-\item
-  but triggers a scalar presupposition: Crnič (2014, ex.(4))
+  \emph{even} (\(\approx\) Krifka's Emph.Assert) vacuous in truth-conditions but with a scalar presupposition: 
 \end{itemize}
 
 \ex. even(C)(p,w) is defined only if
@@ -391,7 +380,9 @@ even(C)(p,w)=p(w).
 
 \begin{frame}{Strong NPIs}
 
-\ex. \a. * Mary read ANY book. \b. even(C)(Mary read any book) is
+pseudoCzech:
+
+\ex. \a. * Mary read \textbf{ani} one book. \b. even(C)(Mary read \textbf{ani} one book) is
 defined only if for all relevant \emph{n} \textgreater{} 1: Mary read
 one book \(<_c\) Mary read \emph{n} books. \hfill (inconsistent)
 
@@ -419,7 +410,9 @@ one book \(<_c\) Mary read \emph{n} books. \hfill (inconsistent)
   operator intervenes between \emph{even} and the WE
 \end{itemize}
 
-\ex. \a. Mary didn't read ANY book. \b. even(C)(Mary didn't read any
+pseudoCzech:
+
+\ex. \a. Mary neg-read \textbf{ani} one book. \b. even(C)(Mary didn't read \textbf{ani} one 
 book) is defined only if for all relevant \emph{n} \textgreater{} 1:
 Mary didn't read one book \(<_c\) Mary didn't read \emph{n} books.
 \hfill (consistent)
@@ -437,120 +430,17 @@ Mary didn't read one book \(<_c\) Mary didn't read \emph{n} books.
 
 \begin{itemize}
 \tightlist
-\item
-  assumption: monotonicity of degrees
+
+\item opposite behaviour for \textit{i}: PPI/least likely/top of the scale
+
 \end{itemize}
 
-\ex. \a. Mary has TONS of money. \b. even(C)(Mary has tons of money) is
-defined only if for all relevant \emph{n} \textless{} \emph{tons of
-money}: Mary has tons of money \(<_c\) Mary has \emph{n}-money.
-\hfill (consistent)
-
-\ex. \a. \# Mary doesn't have TONS of money. \b. even(C)(Mary doesn't
-have tons of money) is defined only if for all relevant \emph{n}
-\textless{} \emph{tons of money}: Mary doesn't have tons of money
-\(<_c\) Mary doesn't have \emph{n}-money. \hfill (inconsistent)
-
-\end{frame}
-
-\begin{frame}{Scalar particles}
-
-\begin{itemize}
-\tightlist
-\item
-  applies to scalar particles as well
-\end{itemize}
-
-\ex. \a. * Mary read even ONE book. \b. Mary didn't read even ONE book.
-
-\begin{itemize}
-\tightlist
-\item
-  the same explanation as for \emph{ANY} (NPI)
-\item
-  attractive for Czech data (strong NPI built on top of PPI):
-\end{itemize}
-
-\ex. \a. \emph{i} `positive even' \ldots strong even (scalar
-particle/PPI) \b. \emph{an-i} `not even' \ldots weak \emph{even} (strong
-NPI)
-
-\end{frame}
-
-\begin{frame}{General overview}
-
-\begin{itemize}
-\tightlist
-\item
-  Krifka (1995): association with Emph.Assert (speech act operator)
-  \(\rightarrow\) expected PPI (wide scope) properties
-\item
-  stipulated in other frameworks (?)
-\item
-  predictions for: polarity items, scalar particles
-\item
-  PPI: top/extreme value on scale
-\item
-  very different from the usual PPI approaches (Szabolcsi 2004, a.o.)
-  focusing on \emph{some}, \ldots{}
-\end{itemize}
-
-\ex. maximal amounts + alternatives \(\leftrightarrow\) PPI behaviour
-
-\begin{itemize}
-\tightlist
-\item
-  what we tested in experiments
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}
-
-English \emph{even}'s PPI behaviour observed:
-
-\begin{itemize}
-\tightlist
-\item
-  Rullmann (1997): \Next is interpreted only as \Next[b]  
-\item
-  ``weak element'' reading
-\end{itemize}
-
-\ex. They hired no linguist who had even read {[}\(_F\) Syntactic
-Structures{]}. \a. They hired no linguist who had even read {[}\(_F\)
-Syntactic Structures{]}. \hfill SS very unlikely reading \b. They hired
-even {[}no linguist who had read {[}\(_F\) Syntactic
-Structures{]}{]}.\hfill SS very likely reading
-
-\begin{itemize}
-\tightlist
-\item
-  similar observation for superlative-modified numerals: Mihoc and
-  Davidson (2017), Cohen and Krifka (2014)
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}
-
-Strong NPIs:
-
-\begin{itemize}
-\tightlist
-\item
-  reversed predictions: covert \emph{even} scoping over intervening
-  \(\neg\)
-\item
-  \(\rightarrow\) association only with weak elements (bottom of the
-  scale)
-\item
-  English \emph{even ONE}, czech \emph{ani}
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}
+\ex. \a. Mary reads \textbf{i} 5 books (per day).
+\a. even(C)(Mary reads 5 books) is defined only if for all relevant \textit{n} < 5: Mary reads 5 books $<_c$ Mary reads \textit{n}-books. \hfill (consistent)
+\z.
+\b. ??? Mary neg-reads \textbf{i} 5 books (per day).
+\a. even(C)(Mary doesn't read 5 books) is defined only if for all relevant \textit{n} < 5: Mary doesn't read 5 books $<_c$ Mary doesn't read \textit{n}-books. \hfill (inconsistent)
+\z.
 
 \end{frame}
 
@@ -766,14 +656,7 @@ if John read \emph{n} books \hfill (inconsistent)
 
 \end{frame}
 
-\begin{frame}{All conditions together}
 
-\begin{center}
-\includegraphics[scale=0.3]{exp1-part_1-2-errorbars.pdf}
-\captionof{figure}{Error-bars, Experiment 1, all conditions}
-\end{center}
-
-\end{frame}
 
 \begin{frame}{Summary}
 
@@ -781,22 +664,7 @@ if John read \emph{n} books \hfill (inconsistent)
 \tightlist
 \item
   \emph{i} associates with strong elements even in the antecedent of
-  conditional
-\item
-  \emph{i} can associate with weak elements in conditionals (less
-  acceptable)
-\item
-  \emph{i} in negated sentences is ungrammatical
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}{Summary}
-
-\begin{itemize}
-\tightlist
-\item
-  reference level + ungrammatical
+  conditional, ungrammatical in negated sentences (reference level conditions)
 \end{itemize}
 
 \ex. \a. \(\checkmark\) {[}\ldots{} \emph{i} + TOP \ldots{}{]}
@@ -804,8 +672,7 @@ if John read \emph{n} books \hfill (inconsistent)
 
 \begin{itemize}
 \tightlist
-\item
-  decreasing acceptability:
+\item  \emph{i} can associate with weak elements in conditionals (decr. acc.)
 \end{itemize}
 
 \ex. \a. if {[}\ldots{} \emph{i} + TOP \ldots{}{]} \hfill Cond-Top \b.
@@ -954,14 +821,6 @@ ráda.\hfill{(\cond{CondPos})}\label{ex-2-b}\newline
 
 \end{frame}
 
-\begin{frame}{All conditions together}
-
-\begin{center}
-\includegraphics[scale=0.3]{exp1-ani-part_1-2-errorbars.pdf}
-\captionof{figure}{Error-bars, Experiment 1 \textit{ani}, all conditions}
-\end{center}
-
-\end{frame}
 
 \begin{frame}{Summary \emph{ani}}
 
@@ -1046,7 +905,7 @@ ráda.\hfill{(\cond{CondPos})}\label{ex-2-b}\newline
   ungrammaticality with Neg (different source: concurrence)
 \item
   PPI hypothesis predicts unobserved preference of the Cond-Bot over
-  Cond-Bot
+  Cond-Top
 \end{itemize}
 
 \end{frame}
@@ -1143,50 +1002,23 @@ Conclusion
 or weakened shouldn't allow association of \emph{even} with strong
 elements.
 
-Crnič (2012) (exhaustified \Next[a] \emph{read some but not all} would
-be non-contradictory):
-
-\ex. \a. ?I doubt that John read some of the books but I also doubt that
-he read all of the books. \b. ?I even doubt that John read ALL of the
-books.
 
 \end{frame}
 
-\begin{frame}
-
-\begin{itemize}
-\tightlist
-\item
-  contrast this with obligatory exhaustification (\emph{read some but
-  not all}):
-\end{itemize}
-
-\ex. The students who read some of the books failed the exam but also
-the students who read all of the books did.
-
-\begin{itemize}
-\tightlist
-\item
-  to be tested
-\item
-  plus: only in exhaustified cases a change of predicate should have an
-  effect (\emph{even ONE} vs. \emph{ANY})
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}{Questions}
+\begin{frame}{Summary and questions}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi})}
 \item
-  Is Crnič theory really working? (more environments to be tested)
+	scalar properties of \textit{i}/\textit{ani} described in Crnič's framework $\checkmark$
 \item
-  If yes, why does it apply to \emph{i} but not to \emph{ani} (negation
-  not exhaustified?)
-\item
-  How about additivity? (different scope from scalar presupp.?)
+	\textit{i} scopal (both ends of scales accept.), \textit{ani} associates only with weak elements (marginal acceptability of \textbf{Top})
+\item Future work: additivity + scope theories: 
 \end{enumerate}
+
+\ex. Parents neg-allowed Petr go \textbf{ani} to boy-scout.
+\a. local presupposition: Petr didn't go to ALT(boy-scout) ... movies, ... \hfill NPI presupp.
+\b. global: Parents neg-allowed Petr to ALT(boy-scout) ... movies, ... \hfill scope presupp.
 
 \end{frame}
 
@@ -1216,6 +1048,55 @@ will become mayor or more. \c. \{w: son become mayor or more in
 \(\approx \forall w \in Acc\){[}son becomes general in \emph{w}
 \(\rightarrow\) mom happy in \emph{w}{]}
 
+\end{frame}
+
+\begin{frame}{All conditions together}
+
+\begin{center}
+\includegraphics[scale=0.3]{exp1-part_1-2-errorbars.pdf}
+\captionof{figure}{Error-bars, Experiment 1, all conditions}
+\end{center}
+
+\end{frame}
+
+\begin{frame}{All conditions together}
+
+\begin{center}
+\includegraphics[scale=0.3]{exp1-ani-part_1-2-errorbars.pdf}
+\captionof{figure}{Error-bars, Experiment 1 \textit{ani}, all conditions}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}
+
+Crnič (2012) (exhaustified \Next[a] \emph{read some but not all} would
+be non-contradictory):
+
+\ex. \a. ?I doubt that John read some of the books but I also doubt that
+he read all of the books. \b. ?I even doubt that John read ALL of the
+books.
+
+
+\begin{itemize}
+\tightlist
+\item
+  contrast this with obligatory exhaustification (\emph{read some but
+  not all}):
+\end{itemize}
+
+\ex. The students who read some of the books failed the exam but also
+the students who read all of the books did.
+
+\begin{itemize}
+\tightlist
+\item
+  to be tested
+\item
+  plus: only in exhaustified cases a change of predicate should have an
+  effect (\emph{even ONE} vs. \emph{ANY})
+\end{itemize}
 \end{frame}
 
 \begin{frame}{\emph{ani} vs.~n-words}
