--- a/slides_g-gen_even_2018.tex
+++ b/slides_g-gen_even_2018.tex
@@ -186,6 +186,8 @@ hired.3PL every linguist who SE neg-read neg-even SYNTACTIC STRUCTURES\\
   questions and future plans
 \end{enumerate}
 
+bit.ly LINK
+
 \end{frame}
 
 \begin{frame}{Positive \emph{even}: \emph{i}}
