--- a/slides_g-gen_even_2018.tex
+++ b/slides_g-gen_even_2018.tex
@@ -186,7 +186,7 @@ hired.3PL every linguist who SE neg-read neg-even SYNTACTIC STRUCTURES\\
   questions and future plans
 \end{enumerate}
 
-bit.ly LINK
+slides link: \url{https://bit.ly/2SyeTJL}
 
 \end{frame}
 
