--- a/slides_g-gen_even_2018.tex
+++ b/slides_g-gen_even_2018.tex
@@ -174,7 +174,7 @@ hired.3PL every linguist who SE neg-read neg-even SYNTACTIC STRUCTURES\\
 \def\labelenumi{\arabic{enumi})}
 \tightlist
 \item
-  preliminary description of \emph{i} and \emph{ani}
+ preliminary description of \emph{i} and \emph{ani}
 \item
   default theory of \emph{even} (assumed)
 \item
@@ -231,7 +231,7 @@ Czech National Corpus (CNK) survey:
   historically related: \emph{ani} is composed of \emph{i} plus negation
 \item
   usually requires clause-mate negation but is licensed in semantics
-  (experimental evidence below)
+  (exp. evidence Dočekal \& Dotlačil 2016)
 \end{itemize}
 
 \begin{enumerate}
@@ -355,9 +355,9 @@ Czech National Corpus (CNK) survey:
 \item
   pre-experimental assumptions:
 \item
-  \emph{i} = Krifka's \emph{TONS of money} (PPI)
+  \emph{i} $\approx$ Krifka's \emph{TONS of money} (PPI)
 \item
-  \emph{ani} = Krifka's \emph{ANY} (strong NPI)
+  \emph{ani} $\approx$ Krifka's \emph{ANY} (strong NPI)
 \end{itemize}
 \end{frame}
 
@@ -533,7 +533,7 @@ generálmajorem.\hfill (\cond{neg-i})\label{ex-2-d}\newline
 \hfill (\cond{ant-i})\label{ex-2-e}\newline
 `If son will become even general, his mother will be happy.' \c. Jestli
 se syn stane \textbf{i} rotným, matka bude šťastná. \newline
-`If son will become even even sergeant, his mother will be
+`If son will become even sergeant, his mother will be
 happy.'\hfill (\cond{ant-i-bot})
 
 \end{frame}
